--- a/package.json
+++ b/package.json
@@ -25,29 +25,33 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.2.6",
     "babel-eslint": "10.1.0",
     "eslint": "7.30.0",
     "eslint-plugin-ghost": "2.4.0",
-    "eslint-plugin-react": "7.24.0"
+    "eslint-plugin-react": "7.24.0",
+    "gatsby-plugin-postcss": "^4.9.0",
+    "postcss": "^8.3.5",
+    "tailwindcss": "^2.2.4"
   },
   "dependencies": {
     "@tryghost/helpers": "1.1.49",
     "@tryghost/helpers-gatsby": "1.0.54",
     "cheerio": "1.0.0-rc.10",
-    "gatsby": "^2.32.13",
+    "gatsby": "^3.9.0",
     "gatsby-awesome-pagination": "0.3.8",
     "gatsby-image": "3.9.0",
-    "gatsby-plugin-advanced-sitemap": "^1.6.0",
-    "gatsby-plugin-catch-links": "^2.10.0",
-    "gatsby-plugin-feed": "^2.13.1",
+    "gatsby-plugin-advanced-sitemap": "^2.0.0",
+    "gatsby-plugin-catch-links": "^3.9.0",
+    "gatsby-plugin-feed": "^3.9.0",
     "gatsby-plugin-force-trailing-slashes": "1.0.5",
-    "gatsby-plugin-manifest": "^2.12.1",
-    "gatsby-plugin-offline": "^3.10.2",
-    "gatsby-plugin-react-helmet": "^3.10.0",
-    "gatsby-plugin-sharp": "^2.14.4",
-    "gatsby-source-filesystem": "^2.11.1",
+    "gatsby-plugin-manifest": "^3.9.0",
+    "gatsby-plugin-offline": "^4.9.0",
+    "gatsby-plugin-react-helmet": "^4.9.0",
+    "gatsby-plugin-sharp": "^3.9.0",
+    "gatsby-source-filesystem": "^3.9.0",
     "gatsby-source-ghost": "4.2.4",
-    "gatsby-transformer-sharp": "^2.12.1",
+    "gatsby-transformer-sharp": "^3.9.0",
     "lodash": "4.17.21",
     "react": "17.0.2",
     "react-dom": "17.0.2",
