--- a/package.json
+++ b/package.json
@@ -25,11 +25,16 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "@graywolfai/react-heroicons": "^1.2.3",
+    "@tailwindcss/aspect-ratio": "^0.2.0",
+    "@tailwindcss/forms": "^0.2.1",
+    "@tailwindcss/line-clamp": "^0.2.0",
+    "@tailwindcss/typography": "^0.4.0",
     "autoprefixer": "^10.2.6",
     "babel-eslint": "10.1.0",
-    "eslint": "7.30.0",
     "eslint-plugin-ghost": "2.4.0",
     "eslint-plugin-react": "7.24.0",
+    "eslint": "7.30.0",
     "gatsby-plugin-postcss": "^4.9.0",
     "postcss": "^8.3.5",
     "tailwindcss": "^2.2.4"
